# DSO_CRC_ZTCC

./: Cargo.toml  README.md  pseudocode.py  ztps_file.txt
nvim-macos/share/nvim/runtime/doc/: tags
random_matlab_code/: Reconstruct_ZTPs.m
simulation_results/: error_events.json  weight_spectrum  weight_spectrum.json
src/: Vec2d.rs  compute_ztcc_weight_spectrum.rs  compute_ztcc_weight_spectrum_fast.rs  dso_crc_polynomial_search.rs  find_IEE_bit_matrix.rs  find_dominant_error_event_fast.rs  find_irreducible_error_event.rs  main.rs  poly_wrapper.rs  reconstruct_ztps.rs  test.rs
src/tests/: tests.rs
src/trellis/: generate_feedback_trellis.rs  mod.rs  poly2trellis.rs  trellis.rs
